--- a/login/login.css
+++ b/login/login.css
@@ -38,7 +38,6 @@ h2 {
   position: relative;
   gap: 16px;
   background-color: var(--box);
-  /* border: 1px solid var(--border); */
   border-radius: 16px;
   min-width: 280px;
   max-width: 350px;
@@ -83,7 +82,6 @@ h2 {
   min-height: 50px;
   width: 100%;
   border-radius: 8px;
-  /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15); */
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
 }
@@ -93,13 +91,11 @@ h2 {
 }
 
 .text-field input {
-  /* color: var(--secondary); */
   font-size: 16px;
   font-weight: 500;
   max-width: 100%;
   width: 100%;
   border: 1px solid var(--border);
-  /* border: 0px; */
   height: 50px;
   letter-spacing: 0.03rem;
   background-color: var(--input);
@@ -107,7 +103,7 @@ h2 {
   transition: 0.25s;
   border-radius: 8px;
   text-indent: 20px;
-  margin-top: 8px;
+  margin-top: 6px;
 }
 
 .text-field input::placeholder {
@@ -131,7 +127,7 @@ h2 {
 }
 
 .text-field input:focus {
-  border: 1px solid var(--active);
+  border: 1px solid var(--button);
 }
 
 .text-field label {
