--- a/login2/style.css
+++ b/login2/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Mulish&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
 :root {
   --primary: #b1b8c6;
@@ -16,7 +16,7 @@
   padding: 0;
   box-sizing: border-box;
   background-color: var(--primary);
-  font-family: Mulish;
+  font-family: Inter;
 }
 
 h2 {
@@ -160,30 +160,3 @@ h2 {
 .btnLogin:hover {
   opacity: 0.85;
 }
-
-/* .input {
-  all: unset;
-  padding: 1rem;
-  border: 1px solid #9e9e9e;
-  border-radius: 10px;
-  transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.label {
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  color: #d4d4d4;
-  pointer-events: none;
-  transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.input:focus {
-  border: 1px solid red;
-}
-
-.input:is(:focus, :valid) ~ label {
-  transform: translateY(-120%) scale(0.7);
-  padding-inline: 0.3rem;
-
-} */
